	src/libs/util/config_util.c,
	src/libs/include/cerebro/cerebro_config.h: Support event server
	config variables.

	* src/cerebrod/cerebrod_event_server.h,
	src/cerebrod/cerebrod_event_server.c,
	src/cerebrod/cerebrod_event_node_timeout_monitor.h,
	src/cerebrod/cerebrod_event_node_timeout_monitor.c,
	src/cerebrod/cerebrod_event_update.h,
	src/cerebrod/cerebrod_event_update.c: New files.

	Add Updown Module Event support

	* src/modules/event/cerebro_event_updown.c: New file.

	* man/cerebro.conf.5.in, man/cerebro_module_devel.3.in: Update
	appropriately.

	Misc

	* src/libs/wrappers/wrappers.h, src/libs/wrappers/wrappers_list.c:
	Add list_peek wrapper.
	
2006-11-07  Albert Chu  <chu11@llnl.gov>

	* src/cerebro-stat/cerebro-stat.c (main): Fix seg-fault corner
	case.
	
2006-11-06  Albert Chu  <chu11@llnl.gov>

	* src/libs/cerebro/cerebro_metric_data.c
	(_metric_value_unmarshall): Remove unnecessary code.
	
2006-11-05  Albert Chu  <chu11@llnl.gov>

	* man/cerebro_nodelist_metric_name.3: Fix typos and add forgotten
	value types.

	* src/libs/cerebro/cerebro.c (cerebro_handle_create): Fix cleanup
	corner case.

	* src/libs/cerebro/cerebro_metric_util.c: Various code cleanup.
	
2006-11-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_monitor_update.h,
	src/cerebrod/cerebrod_monitor_update.c: New files.

	* src/cerebrod/cerebrod_listener_data.h,
	src/cerebrod/cerebrod_listener_data.c: Cleanup by moving monitor
	module code to new files above.

	* src/cerebrod/Makefile.am: Updated for new files.
	
2006-10-31  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules):
	Cleanup strtok code.

	* Various continued code cleanup.
	
2006-10-30  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c,
	src/cerebrod/cerebrod_listener_data.h,
	src/cerebrod/cerebrod_metric_controller.c,
	src/cerebrod/cerebrod_metric_server.c,
	src/libs/include/cerebro/cerebro_config.h,